# fin

./: LICENSE  README.md  SECURITY.md  clean_cover_guard.ps1  rescue.ps1
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: codeql.yml  main.yml
file-utils-i/: README  UNWISE.bat  checksums.md  file-utils-i_installer.bat  file-utils-i_installer.ps1  install.bat  make_installer.ps1
file-utils-i/docs/: checksums.md  checksums_for_dummies.md  quick_start.md  usage_examples.md  user_manual.md
file-utils-ii/: 1-4-how-to.md  1-make_archive.ps1  2-make_installer.ps1  3-make_exe.ps1  4-make_proc-wolf_complete.ps1  README  file-utils-ii.db  install.bat  uninstall.bat
file-utils-ii/docs/: advance_usage_guide_partial.md  claude_esplains_claudes_code.md  claude_on_marketing_plus_some_crazy.md  modularizing.md  the_all_important_posterity_convo.md
file-utils-iii/: README  cargo.toml
file-utils-iii/.old/: main.rs  qubit.rs  qubit_cli.rs
file-utils-iii/.old/olds/: engine.ol1  engine.ol2  engine.ol4  engine.old  main.ol1  main.ol2  main.ol4  (+6 more)
file-utils-iii/docs/: # Quick Start Guide 🚀.md  # REST API Documentation 🔌.md  # System Architecture Overview.ini  ## 📚 Client Libraries.md  Claude's_Overview.md  architecture_overview.md  implementation_plan.md  search_engine_idea.txt
file-utils-iii/src/: Cargo.toml  entropy.rs  file_watcher.rs  filesystem_indexer.rs  lib.rs  main.rs  quantum_types.rs  qubit.rs  qubit_cli.rs
file-utils-iv/: README.md  cargo.toml
file-utils-iv/src/: astronomical.rs  config.rs  date_utils.rs  main.rs
woflang/: LICENCE  desktop.ini
(+23 files in other folders)
